--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "javascript-development-environment",
     "version": "1.0.0",
     "description": "JavaScript development environment",
-    "scripts": {},
+    "scripts": {
+        "build": "js-dev-env build --output public"
+    },
     "author": "Brandi Apetsi",
     "license": "MIT",
     "dependencies": {
@@ -18,18 +20,18 @@
         "chai": "3.5.0",
         "chalk": "1.1.3",
         "cheerio": "0.22.0",
-        "compression": "1.6.2",
+        "compression": "^1.7.4",
         "cross-env": "3.1.3",
         "css-loader": "0.25.0",
         "eslint": "3.8.1",
-        "eslint-plugin-import": "2.0.1",
+        "eslint-plugin-import": "^2.18.2",
         "eslint-watch": "2.1.14",
-        "express": "4.14.0",
+        "express": "^4.17.1",
         "extract-text-webpack-plugin": "1.0.1",
         "html-webpack-plugin": "2.22.0",
         "jsdom": "9.8.0",
-        "json-schema-faker": "0.3.6",
-        "json-server": "0.8.22",
+        "json-schema-faker": "^0.4.7",
+        "json-server": "^0.15.1",
         "localtunnel": "1.8.1",
         "mocha": "3.1.2",
         "nock": "8.1.0",
