--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
     "version": "1.0.0",
     "description": "JavaScript development environment",
     "scripts": {
-        "build": "js-dev-env build --output public"
+      //babel-node transpiles the code before passing it on to node
+      "prestart": "babel-node buildScripts/startMessage.js",
+      "start": "npm-run-all --parallel open:src",
+      "open:src": "babel-node buildScripts/srcServer.js"
     },
     "author": "Brandi Apetsi",
     "license": "MIT",
     "dependencies": {
+        "fsevents": "^2.1.1",
         "whatwg-fetch": "1.0.0"
     },
     "devDependencies": {
