--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
       "prestart": "babel-node buildScripts/startMessage.js",
       "start": "npm-run-all --parallel open:src",
-      "open:src": "babel-node buildScripts/srcServer.js"
+      "open:src": "babel-node buildScripts/srcServer.js",
+      "lint": "esw webpack.config.* src buildScripts --color"
     },
     "author": "Brandi Apetsi",
     "license": "MIT",
