--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
     "version": "1.0.0",
     "description": "JavaScript development environment",
     "scripts": {
-      "prestart": "babel-node buildScripts/startMessage.js",
-      "start": "npm-run-all --parallel open:src",
-      "open:src": "babel-node buildScripts/srcServer.js",
-      "lint": "esw webpack.config.* src buildScripts --color"
+        "prestart": "babel-node buildScripts/startMessage.js",
+        "start": "npm-run-all --parallel open:src lint:watch",
+        "open:src": "babel-node buildScripts/srcServer.js",
+        "lint": "esw webpack.config.* src buildScripts --color",
+        "lint:watch": "npm run lint -- --watch",
+        "test": "mocha --reporter progress buildScripts.testSetup.js \"src/**/*.test.js\""
     },
     "author": "Brandi Apetsi",
     "license": "MIT",
     "dependencies": {
+        "babel-node": "0.0.1-security",
         "fsevents": "^2.1.1",
         "whatwg-fetch": "1.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.6.4",
+        "@babel/node": "^7.6.3",
         "babel-cli": "6.16.0",
         "babel-core": "6.17.0",
         "babel-loader": "6.2.5",
@@ -26,27 +31,29 @@
         "cheerio": "0.22.0",
         "compression": "^1.7.4",
         "cross-env": "3.1.3",
-        "css-loader": "0.25.0",
+        "css-loader": "^3.2.0",
         "eslint": "3.8.1",
         "eslint-plugin-import": "^2.18.2",
-        "eslint-watch": "2.1.14",
+        "eslint-watch": "^6.0.1",
         "express": "^4.17.1",
         "extract-text-webpack-plugin": "1.0.1",
-        "html-webpack-plugin": "2.22.0",
+        "html-webpack-plugin": "^3.2.0",
+        "install": "^0.13.0",
         "jsdom": "9.8.0",
         "json-schema-faker": "^0.4.7",
         "json-server": "^0.15.1",
         "localtunnel": "1.8.1",
-        "mocha": "3.1.2",
+        "mocha": "^6.2.2",
         "nock": "8.1.0",
+        "npm": "^6.12.0",
         "npm-run-all": "3.1.1",
         "nsp": "2.6.2",
         "numeral": "1.5.3",
-        "open": "0.0.5",
+        "open": "^7.0.0",
         "rimraf": "2.5.4",
         "style-loader": "0.13.1",
         "surge": "0.20.4",
-        "webpack": "1.13.2",
+        "webpack": "^4.41.2",
         "webpack-dev-middleware": "1.8.4",
         "webpack-hot-middleware": "2.13.0",
         "webpack-md5-hash": "0.0.5"
