declared schema for mock data

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "open:src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\" ",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Brandi Apetsi",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-node": "0.0.1-security",
+    "colors": "^1.4.0",
     "fsevents": "^2.1.1",
     "whatwg-fetch": "1.0.0"
   },
